--- a/flatifier/pom.xml
+++ b/flatifier/pom.xml
@@ -230,8 +230,8 @@
                                     <goal>sign</goal>
                                 </goals>
                                 <configuration>
+                                    <!-- Prevent gpg from using pinentry programs -->
                                     <gpgArguments>
-                                        <arg>--batch</arg>
                                         <arg>--pinentry-mode</arg>
                                         <arg>loopback</arg>
                                     </gpgArguments>
